<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_dashboard_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/dashboard"/>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:title="@string/settings"/>

    <item
        android:id="@+id/restore"
        android:icon="@drawable/ic_restore_white_24dp"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:title="@string/reset"/>

    <item
        android:id="@+id/close"
        android:icon="@drawable/ic_close_white_24dp"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:title="@string/close"/>

</menu>