<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/next_title1"/>
    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/next_title2"/>
    <TextView
        android:id="@+id/last_week_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textColor="#008000"
        android:textSize="15sp"
        android:text="@string/update_record_share"/>

    <ImageButton
        android:contentDescription="@string/update_record_share"
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_marginBottom="15dp"
        android:src="@drawable/twitter_social_icon_circle_color"
        android:background="#00000000"
        android:text="@string/twitter"/>

</LinearLayout>