<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_gravity="top">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:contentDescription="@null"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/txt_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:text="@string/level"/>
            <Switch
                android:id="@+id/switch_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txt_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/level_normal"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5pt">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/icon_original"/>

        <!--LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="start">

            <Button
                android:id="@+id/performance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_event_note_black_24dp"
                android:background="#00000000"
                style="android:attr/buttonBarButtonStyle"
                android:textSize="15sp"
                android:text="@string/performance"/>
        </LinearLayout-->


    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_margin="10dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/puzzle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:textColor="#2ca9e1"
                android:text="@string/puzzle"
                android:textSize="30sp"
                android:layout_marginTop="5pt"
                android:layout_marginBottom="10dp"/>
            <!--Button
                android:id="@+id/read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:textColor="#dccb18"
                android:text="@string/read"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"/-->

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:text="@string/version"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/adUnitId"
        ads:adSize="SMART_BANNER" />

</LinearLayout>