<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_puzzle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.aufthesis.idiom.PuzzleActivity">

    <!--FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:gravity="top">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/instruction1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="13sp"
                    android:text="@string/instruction1"/>

                <!--CheckBox
                    android:id="@+id/check_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="#0000ff"
                    android:text="@string/hint"/-->

            </LinearLayout>
            <TextView
                android:id="@+id/record"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="13sp"
                android:textColor="#FF0000"
                android:text="@string/record"/>
        </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center_vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/row1_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10pt"
                    android:layout_marginEnd="10pt"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/idiom1"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom2"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom3"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom4"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom5"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row2_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10pt"
                    android:layout_marginEnd="10pt"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/idiom6"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom7"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom8"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom9"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom10"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/row3_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10pt"
                    android:layout_marginEnd="10pt"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/idiom11"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom12"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom13"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom14"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom15"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/row4_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10pt"
                    android:layout_marginEnd="10pt"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/idiom16"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom17"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom18"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom19"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/idiom20"
                        android:layout_width="0pt"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </ScrollView>
    <!--/FrameLayout-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_gravity="center|bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <Button
                android:id="@+id/ans1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                style="android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/blank"/>
            <Button
                android:id="@+id/ans2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                style="android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/blank"/>
            <Button
                android:id="@+id/ans3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                style="android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/blank"/>
            <Button
                android:id="@+id/ans4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                style="android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/blank"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">


            <Button
                android:id="@+id/ans5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                style="android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/blank"/>
            <Button
                android:id="@+id/ans6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                style="android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/blank"/>
            <Button
                android:id="@+id/ans7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                style="android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/blank"/>
            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_cancel_black_36dp"
                style="android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ff0000"
                android:text="@string/reset"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:gravity="center">
            <Button
                android:id="@+id/put_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_fast_rewind_black_24dp"
                android:background="#00000000"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/back_question"/>
            <Button
                android:id="@+id/look_answer_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/rectangle"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/look_answer2"/>
            <Button
                android:id="@+id/answer_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/circle"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/to_answer"/>
            <Button
                android:id="@+id/renew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_fast_forward_black_24dp"
                android:background="#00000000"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/next_question"/>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adUnitId="@string/adUnitId"
            ads:adSize="SMART_BANNER" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>
